--- a/css/main.css
+++ b/css/main.css
@@ -1542,6 +1542,20 @@ address {
   right: 28px;
 }
 
+.footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
 @media screen and (max-width: 768px) {
   .footer .container {
     display: -webkit-box;
@@ -1600,6 +1614,8 @@ address {
   max-width: 528px;
   width: 100%;
   height: 609px;
+  max-height: 90vh;
+  overflow: scroll;
   position: absolute;
   top: 50%;
   left: 50%;
