--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -367,6 +367,10 @@
       }
 }
   .footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
     @media screen and (max-width: 768px) {
       display: flex;
       flex-direction: column;
