--- a/css/main.css
+++ b/css/main.css
@@ -337,7 +337,17 @@ address {
 }
 
 .mob-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: fixed;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   top: 0;
   left: 0;
   background-color: #ffffff;
@@ -347,20 +357,9 @@ address {
   z-index: 1;
   padding-top: 48px;
   overflow: scroll;
-}
-.mob-menu > .container {
   padding-left: 40px;
+  padding-bottom: 48px;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   overflow: auto;
 }
 
@@ -447,6 +446,10 @@ address {
   fill: var(--accent-color);
 }
 
+.mob-menu__button {
+  margin-top: 306px;
+}
+
 .mob-current {
   color: var(--accent-color);
   position: relative;
@@ -467,6 +470,7 @@ address {
   line-height: 1.16;
   letter-spacing: 0.02em;
   color: #757575;
+  margin-top: auto;
 }
 
 .mob-menu-tel {
@@ -475,6 +479,7 @@ address {
   line-height: 1.1;
   letter-spacing: 0.02em;
   color: var(--accent-color);
+  margin-top: auto;
 }
 
 .mob-soc {
@@ -485,6 +490,7 @@ address {
   margin-bottom: 48px;
   gap: 10px;
   width: 100%;
+  margin-top: auto;
 }
 
 .mob-soc__item:not(:last-child) {
