--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -293,7 +293,10 @@ margin-left: 93px;
 
 
   .mob-menu {
+    display: flex;
+    flex-direction: column;
     position: fixed;
+    justify-content: space-between;
     top: 0;
     left: 0;
     background-color: #ffffff;
@@ -304,15 +307,15 @@ margin-left: 93px;
     padding-top: 48px;
     overflow: scroll;
    
-    > .container {
+   
       padding-left: 40px;
+      padding-bottom: 48px;
     
       height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      
+     
       overflow: auto;
-    }
+    
   }
   
   .open-menu-btn {
@@ -399,6 +402,9 @@ margin-left: 93px;
     }
    
   }
+  .mob-menu__button {
+    margin-top: 306px;
+  }
 
   .mob-current {
     color: var(--accent-color);
@@ -420,6 +426,7 @@ margin-left: 93px;
     line-height: 1.16;
     letter-spacing: 0.02em;
     color: #757575;
+    margin-top: auto;
   }
   
   .mob-menu-tel {
@@ -428,6 +435,7 @@ margin-left: 93px;
     line-height: 1.1;
     letter-spacing: 0.02em;
     color: var(--accent-color);
+    margin-top: auto;
   }
   
   .mob-soc {
@@ -436,6 +444,7 @@ margin-left: 93px;
     margin-bottom: 48px;
     gap: 10px;
     width: 100%;
+    margin-top: auto;
    
  
  
