--- a/css/main.css
+++ b/css/main.css
@@ -576,11 +576,11 @@ address {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #FFFFFF;
-  width: 360px;
+  width: 100%;
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 360px;
+  max-width: 320px;
 }
 @media screen and (min-width: 768px) {
   .hero__title {
@@ -591,11 +591,10 @@ address {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
-    width: 360px;
+    width: 100%;
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
-    min-width: 360px;
   }
 }
 @media screen and (min-width: 1200px) {
