--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -96,11 +96,11 @@
         letter-spacing: 0.06em;
         text-transform: uppercase;
         color: #FFFFFF;
-        width: 360px;
+        width: 100%;
         margin-bottom: 30px;
         margin-left: auto;
         margin-right: auto;
-        max-width: 360px;
+        max-width: 320px;
       
      
         @media screen and (min-width: 768px) {
@@ -111,11 +111,12 @@
           letter-spacing: 0.06em;
           text-transform: uppercase;
           color: #FFFFFF;
-          width: 360px;
+          
+          width: 100%;
           margin-bottom: 30px;
           margin-left: auto;
           margin-right: auto;
-          min-width: 360px;
+       
        
         }
         @media screen and (min-width: 1200px) {
